<resources>
    <string name="app_name">Kudamono</string>

    <string name="register_fill">Register</string>
    <string name="login_fill">Login</string>
    <string name="username_fill">Username</string>
    <string name="password_fill">Password</string>

    <string name="user_greeting">Welcome, Nama User</string>
    <string name="user_profile">Nama User</string>
    <string name="address_profile">Alamat</string>

    <string name="balance">Rp. 99.001</string>


    <string name="store_desc">Ini bagian deskripsi dari tokonya, ngejelasin alamat dan rating dari pengguna lain mengenai toko ini</string>
    <string name="fruit_desc">Ini bagian deskripsi dari buahnya, kasih tau berbagai mengenai buah yang di pajang biar konsumen tau</string>
    <string name="help_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>
