<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_page"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_fill"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_page"
        android:elevation="6dp"
        android:padding="25dp"
        android:gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_fill"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_fill"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"/>
        <Button
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_fill"
            />
        <Button
            android:id="@+id/login_page_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_fill"
            />
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="40dp"/>
</LinearLayout>